Refactor frequency classification
Teacher requested using a different approach. Added unit tests
before refactoring.

--- a/assignments/program4/Makefile
+++ b/assignments/program4/Makefile
@@ -32,7 +32,7 @@ $(BUILDDIR)/%.o: $(SRCDIR)/%.$(SRCEXT)
 test: $(TEST_TARGET)
 	$(TEST_TARGET)
 
-$(TEST_TARGET): $(TEST_OBJECTS)
+$(TEST_TARGET): $(TEST_OBJECTS) $(OBJECTS)
 	@echo " Linking..."
 	@echo " $(CC) $^ -o $(TEST_TARGET) $(LIB)"; $(CC) $^ -o $(TEST_TARGET) $(LIB)
 
