Option 1 for program 4

--- a/assignments/program4/Makefile
+++ b/assignments/program4/Makefile
@@ -19,6 +19,9 @@ CFLAGS := -g -Wall
 LIB :=
 INC := -I include
 
+run: $(TARGET)
+	$(TARGET)
+
 $(TARGET): $(OBJECTS)
 	@echo " Linking..."
 	@echo " $(CC) $^ -o $(TARGET) $(LIB)"; $(CC) $^ -o $(TARGET) $(LIB)
